[gd_scene load_steps=3 format=3 uid="uid://sqbinkq5ne4n"]

[ext_resource type="Script" path="res://Scripts/settings_menu_instantiate.gd" id="1_g64y6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_he3jd"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[node name="Settings Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g64y6")

[node name="Background" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_he3jd")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -161.5
offset_right = 179.0
offset_bottom = 161.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Master_lb" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master Volume
"

[node name="Master" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.8

[node name="Music_lb" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume
"

[node name="Music" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.8

[node name="SFX_lb" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX Volume"

[node name="SFX" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.8

[node name="back" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -122.0
offset_right = 53.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Back
"

[connection signal="drag_ended" from="Background/VBoxContainer/Master" to="." method="_on_master_drag_ended"]
[connection signal="mouse_entered" from="Background/VBoxContainer/Master" to="." method="_on_master_mouse_entered"]
[connection signal="mouse_exited" from="Background/VBoxContainer/Master" to="." method="_on_master_mouse_exited"]
[connection signal="value_changed" from="Background/VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="mouse_exited" from="Background/VBoxContainer/Music" to="." method="_on_music_mouse_exited"]
[connection signal="value_changed" from="Background/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="mouse_exited" from="Background/VBoxContainer/SFX" to="." method="_on_sfx_mouse_exited"]
[connection signal="value_changed" from="Background/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Background/back" to="." method="_on_back_pressed"]
